--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,9 @@ platform = nordicnrf52
 board = nano33ble
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
-lib_deps = hboyd255/NESControllerInterface@^1.0.0
+lib_deps = 
+	hboyd255/NESControllerInterface@^1.0.0
+	adafruit/Adafruit NeoPixel@^1.12.3
+	adafruit/Adafruit NeoMatrix@^1.3.3
+	adafruit/Adafruit GFX Library@^1.11.11
+	adafruit/Adafruit BusIO@^1.16.1
