--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.autoSave": "afterDelay",
     "files.associations": {
         "iterator": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
