--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,8 @@ lib_extra_dirs = ~/Documents/Arduino/libraries
 lib_deps = 
 	hboyd255/NESControllerInterface@^1.0.0
 	adafruit/Adafruit NeoPixel@^1.12.3
+	adafruit/Adafruit NeoMatrix@^1.3.3
+	adafruit/Adafruit GFX Library
+	adafruit/Adafruit BusIO
+	Wire
+	SPI
